--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -31,7 +31,7 @@
                 </ul>
             </nav>
             <div class="header__actions actions">
-                <a href="" class="actions__item">Fb</a>
+                <a href="#" class="actions__item">Fb</a>
                 <a href="#" class="actions__item">Tw</a>
                 <a href="#" class="actions__item">Ln</a>
                 <div class="actions__item">
@@ -226,7 +226,7 @@
                     </ul>
                 </nav>
                 <div class="footer__actions actions actions_color">
-                    <a href="" class="actions__item">Fb</a>
+                    <a href="#" class="actions__item">Fb</a>
                     <a href="#" class="actions__item">Tw</a>
                     <a href="#" class="actions__item">Ln</a>
                 </div>
